<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Title"
        android:id="@+id/title"
        android:padding="16dp"
        android:textColor="#000000"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Subtitle"
        android:id="@+id/subtitle"
        android:padding="16dp"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Authors"
        android:padding="16dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Description"
        android:id="@+id/description"
        android:padding="16dp"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pages"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Publisher"
            android:id="@+id/publisher"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Publish Date"
            android:id="@+id/publishDate"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="pages"
            android:id="@+id/pages"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Rating"
            android:id="@+id/rating"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="#000000"/>
</LinearLayout>